# src/track/track.controller.ts
@@ -10,25 +10,79 @@ import {
   NotFoundException,
   HttpCode,
 } from '@nestjs/common';
+import {
+  ApiBadRequestResponse,
+  ApiBody,
+  ApiCreatedResponse,
+  ApiTags,
+  ApiOperation,
+  ApiOkResponse,
+  ApiParam,
+  ApiNotFoundResponse,
+  ApiNoContentResponse,
+} from '@nestjs/swagger';
+
 import { TrackService } from './track.service';
 import { CreateTrackDto } from './dto/create-track.dto';
 import { UpdateTrackDto } from './dto/update-track.dto';
+import { Track } from './entities/track.entity';
 
 @Controller('track')
+@ApiTags('Track')
 export class TrackController {
   constructor(private readonly trackService: TrackService) {}
 
   @Post()
+  @ApiOperation({
+    summary: 'create new track',
+  })
+  @ApiBody({
+    type: CreateTrackDto,
+    description: 'Data for new track',
+  })
+  @ApiCreatedResponse({
+    description: 'Track successfully created',
+    type: Track,
+  })
+  @ApiBadRequestResponse({
+    description: 'Request body does not contain required fields',
+  })
   create(@Body() createTrackDto: CreateTrackDto) {
     return this.trackService.create(createTrackDto);
   }
 
   @Get()
+  @ApiOperation({
+    summary: 'get all tracks',
+  })
+  @ApiOkResponse({
+    description: 'Tracks successfully getted',
+    type: [Track],
+  })
   findAll() {
     return this.trackService.findAll();
   }
 
   @Get(':id')
+  @ApiOperation({
+    summary: 'get single track by id',
+  })
+  @ApiParam({
+    name: 'id',
+    required: true,
+    description: 'Id of track',
+    type: 'string',
+  })
+  @ApiOkResponse({
+    description: 'Track successfully getted',
+    type: Track,
+  })
+  @ApiBadRequestResponse({
+    description: 'Track id is invalid (not UUID)',
+  })
+  @ApiNotFoundResponse({
+    description: 'Track with given id not found',
+  })
   findOne(@Param('id', new ParseUUIDPipe()) id: string) {
     const track = this.trackService.findOne(id);
     if (!track) {
@@ -38,6 +92,27 @@ export class TrackController {
   }
 
   @Put(':id')
+  @ApiOperation({
+    summary: 'update album track',
+  })
+  @ApiParam({
+    name: 'id',
+    required: true,
+    description: 'Id of track',
+    type: 'string',
+  })
+  @ApiBody({
+    type: UpdateTrackDto,
+    description: 'Data for update album',
+  })
+  @ApiOkResponse({
+    description: 'Track successfully updated',
+    type: Track,
+  })
+  @ApiBadRequestResponse({
+    description: 'Track id is invalid (not UUID)',
+  })
+  @ApiNotFoundResponse({ description: 'Track with given id not found' })
   update(
     @Param('id', new ParseUUIDPipe()) id: string,
     @Body() updateTrackDto: UpdateTrackDto,
@@ -50,6 +125,22 @@ export class TrackController {
   }
 
   @Delete(':id')
+  @ApiOperation({
+    summary: 'delete track',
+  })
+  @ApiParam({
+    name: 'id',
+    required: true,
+    description: 'Id of track',
+    type: 'string',
+  })
+  @ApiNoContentResponse({
+    description: 'Track successfully deleted',
+  })
+  @ApiBadRequestResponse({
+    description: 'Track id is invalid (not UUID)',
+  })
+  @ApiNotFoundResponse({ description: 'Track with given id not found' })
   @HttpCode(204)
   remove(@Param('id', new ParseUUIDPipe()) id: string) {
     return this.trackService.remove(id);
